Changes for Check-in 2, the Ridge Model is IP

--- a/Copy_of_Evergreen_Proj.ipynb
+++ b/Copy_of_Evergreen_Proj.ipynb
@@ -6,7 +6,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "pip install ucimlrepo\n",
+        "%pip install ucimlrepo\n",
         "from ucimlrepo import fetch_ucirepo\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt"
@@ -570,8 +570,8 @@
         }
       ],
       "source": [
-        "!pip install scikit-lego\n",
-        "!pip install sklego"
+        "%pip install scikit-lego\n",
+        "%pip install sklego"
       ]
     },
     {
